fix(ci): update weekly [skip ci]