@@ -285,6 +285,14 @@
                     <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
